# swig-go-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build+test  clean  go.mod
cmake/: go.cmake  gtest.cmake
cmd/: CMakeLists.txt  main.cpp
cmd/swig-go-cpp/: swig-go-cpp.go
contacts/: Contacts.cpp  Contacts.h  contacts_test.go  interface.i
cpp/: Palindrome.h  cpp_test.go  interface.i  unit_tests.cpp.txt
pal/: Palindrome.cpp  interface.i  pal_test.go
rev/: Reverse.cpp  Reverse.h  interface.i  rev_test.go
